Actions
Bug #10311
closedaddbadsec: NULL pointer errors
Start date:
2019-01-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
ix_altsctr.c: In function 'init_altsctr': ix_altsctr.c:277:33: error: comparison between pointer and integer [-Werror] if (ap->ap_tblp->alts_map_base == NULL) { ^~ ix_altsctr.c: In function 'gen_alts_ent': ix_altsctr.c:485:33: error: comparison between pointer and integer [-Werror] if (ap->ap_tblp->alts_ent_base == NULL) { ^~ ix_altsctr.c: In function 'assign_altsctr': ix_altsctr.c:515:19: error: comparison between pointer and integer [-Werror] if (alts_ind == NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8d44205c2de6047b3104694e998664b7a1c527ab
commit 8d44205c2de6047b3104694e998664b7a1c527ab Author: Toomas Soome <tsoome@me.com> Date: 2019-02-04T18:39:11.000Z 10311 addbadsec: NULL pointer errors Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions